# ai-attendance-system

./: .gitignore  README.md  err.json  manage.py  vercel-logs.json  vercel.json
web/: ai_service.py  liveness_service.py  manage.py  pyproject.toml  requirements.txt  vercel.json
web/academics/: admin.py  forms.py  lifecycle.py  models.py  tests.py  urls.py  views.py
web/academics/migrations/: 0003_department_roll_code_batch.py  0004_batch_code.py  0005_batch_semester_lock_fields.py
web/accounts/: admin.py  models.py  tests.py  views.py
web/accounts/migrations/: 0002_customuser_batch_and_sequence.py
web/antispoof/: anti_spoof_predict.py
web/antispoof/data_io/: dataset_loader.py
web/antispoof/model_lib/: MultiFTNet.py
web/attendance/: api.py  models.py  reports.py  signals.py  tests.py  views.py
web/attendance/migrations/: 0004_session_batch.py
web/attendance_project/: settings.py  urls.py  wsgi.py
web/enrollment/: views.py
web/static/css/: style.css
web/templates/: 404.html  base.html
web/templates/academics/: admin_all_sessions.html  batch_form.html  batch_list.html  department_list.html  reset_password.html  semester_management.html  student_form.html  student_list.html  subject_list.html  teacher_list.html  teacher_promote_hod.html
web/templates/accounts/: change_password.html  profile.html
web/templates/attendance/: correction_requests_teacher.html  hod_overview.html  hod_students.html  my_correction_requests.html  reports.html  session_detail.html  session_detail_camera.html  session_detail_with_correction.html  session_history.html  (+3 more)
(+7 files in other folders)
