[project]
name = "ai-attendance-system"
version = "0.1.2"
description = "Web dashboard clean build"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "crispy-bootstrap5==2025.6",
    "dj-database-url==3.0.1",
    "django==4.2.30",
    "django-crispy-forms==2.4",
    "filelock==3.16.1",
    "gunicorn==23.0.0",
    "humanfriendly==10.0",
    "idna==3.15",
    "packaging==26.2",
    "psycopg2-binary==2.9.9",
    "requests==2.32.4",
    "sqlparse==0.5.5",
    "typing-extensions==4.13.2",
    "tzdata==2026.2",
    "urllib3==2.2.3",
    "whitenoise==6.7.0",
]

[tool.uv]
# This forces uv to completely substitute the broken C-build package with a no-op fallback
no-binary = ["backports-zoneinfo"]